examples/test/testpolicy17910.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17910
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key45: value44
      key34: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value23
          key30: value7
      podSelector:
        matchLabels:
          key11: value10
          key28: value26
